--- a/upload/admin/view/template/extension/module/qmenu.twig
+++ b/upload/admin/view/template/extension/module/qmenu.twig
@@ -36,6 +36,19 @@
             </div>
           </div>
           <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-primary-language">{{ entry_primary_language }}</label>
+            <div class="col-sm-10">
+              <select name="module_qmenu_primary_language_id" id="input-primary-language" class="form-control">
+                {% for language in languages %}
+                <option value="{{ language.language_id }}" {% if language.language_id == module_qmenu_primary_language_id %}selected="selected"{% endif %}>{{ language.name }}</option>
+                {% endfor %}
+              </select>
+              {% if help_primary_language %}
+              <p class="help-block">{{ help_primary_language }}</p>
+              {% endif %}
+            </div>
+          </div>
+          <div class="form-group">
             <label class="col-sm-2 control-label" for="input-label">{{ entry_button_label }}</label>
             <div class="col-sm-10">
               {% for language in languages %}
