кнопки удаления почищены

--- a/qo_admin_header_button_fixed.ocmod/upload/admin/view/template/extension/module/qmenu.twig
+++ b/qo_admin_header_button_fixed.ocmod/upload/admin/view/template/extension/module/qmenu.twig
@@ -54,7 +54,7 @@
                     <td class="text-left">{{ column_destination }}</td>
                     <td class="text-left">{{ column_enabled }}</td>
                     <td class="text-left">{{ column_new_tab }}</td>
-                    <td class="text-left">{{ column_action }}</td>
+                    <td class="text-left"></td>
                   </tr>
                 </thead>
                 <tbody>
@@ -113,7 +113,7 @@
                       <input type="checkbox" name="module_qmenu_items[{{ item_row }}][new_tab]" value="1" {% if item.new_tab %}checked="checked"{% endif %} />
                     </td>
                     <td class="text-right">
-                      <button type="button" data-row="qmenu-item-row{{ item_row }}" class="btn btn-danger qmenu-remove"><i class="fa fa-minus-circle"></i> {{ button_remove }}</button>
+                      <button type="button" data-row="qmenu-item-row{{ item_row }}" class="btn btn-danger qmenu-remove"><i class="fa fa-minus-circle"></i></button>
                     </td>
                   </tr>
                   {% set item_row = item_row + 1 %}
@@ -169,7 +169,7 @@ $('#qmenu-add-item').on('click', function() {
       html += '  </td>';
       html += '  <td class="text-center"><input type="hidden" name="module_qmenu_items[' + qmenuItemRow + '][enabled]" value="0" /><input type="checkbox" name="module_qmenu_items[' + qmenuItemRow + '][enabled]" value="1" checked="checked" /></td>';
       html += '  <td class="text-center"><input type="checkbox" name="module_qmenu_items[' + qmenuItemRow + '][new_tab]" value="1" /></td>';
-      html += '  <td class="text-right"><button type="button" data-row="' + rowId + '" class="btn btn-danger qmenu-remove"><i class="fa fa-minus-circle"></i> {{ button_remove|escape('js') }}</button></td>';
+      html += '  <td class="text-right"><button type="button" data-row="' + rowId + '" class="btn btn-danger qmenu-remove"><i class="fa fa-minus-circle"></i></button></td>';
       html += '</tr>';
 
   $('#qmenu-items tbody').append(html);
